@@ -18,27 +18,27 @@ the following:
   - requestMethod     The request method (e.g. "GET" or "POST")
   - requestTime       A Date that indicates the time the request was received
   - remoteAddr        The IP address of the client
-  - remotePort        The port on the client machine being used to communicate
-                      with the server
+  - remotePort        The number of the port on the client that is being used.
+                      May be 0 if unknown
   - serverName        The host name of the server. Defaults to the value of
                       process.env.SERVER_NAME or the bound address of the server
-                      as reported by the operating system.
-  - serverPort        The TCP port the server is bound to. May be an empty
-                      string when the server is using a UNIX socket.
+                      as reported by the operating system
+  - serverPort        The number of the TCP port the server is bound to. May be
+                      0 when using Unix domain sockets
   - scriptName        The initial portion of the request URL's "path" that
                       corresponds to the application, so that it knows its
                       virtual "location". This may be an empty string, if the
-                      application corresponds to the "root" of the server.
+                      application corresponds to the "root" of the server
   - pathInfo          The remainder of the request URL's "path", designating
                       the virtual "location" of the target resource within the
                       application. This may be an empty string if the request
                       URL targets the "root" of the application and does not
                       have a trailing slash. This value may be percent-encoded
-                      when originating from a URL.
+                      when originating from a URL
   - queryString       The portion of the request URL that follows the "?", if
-                      any. May be an empty string.
+                      any. May be an empty string
   - headers           An object of client-supplied HTTP headers and their values.
-                      All header names must be lower-cased.
+                      All header names must be lower-cased
   - input             A readable Stream of data contained in the request body
   - error             A writable Stream for error output
   - strataVersion     An array of integers that indicate the current version of
