@@ -4,6 +4,7 @@ var https = require('https');
 var url = require('url');
 var EventEmitter = require('events').EventEmitter;
 var Stream = require('stream');
+var BufferedStream = require('bufferedstream');
 var UserError = require('usererror');
 var utils = require('./utils');
 
@@ -245,7 +246,7 @@ function bind(app, server) {
  *   - pathInfo         The path of the request
  *   - queryString      The query string
  *   - headers          An object of HTTP headers and values
- *   - input            The input stream of the request body (required)
+ *   - input            The input stream of the request body
  *   - error            The error stream
  */
 function makeEnv(opts) {
@@ -258,9 +259,9 @@ function makeEnv(opts) {
   env.requestMethod = (opts.requestMethod || 'GET').toUpperCase();
   env.requestTime = opts.requestTime || new Date;
   env.remoteAddr = opts.remoteAddr || '';
-  env.remotePort = opts.remotePort || '';
+  env.remotePort = parseInt(opts.remotePort, 10) || 0;
   env.serverName = opts.serverName || '';
-  env.serverPort = opts.serverPort || '';
+  env.serverPort = parseInt(opts.serverPort, 10) || 0;
   env.scriptName = opts.scriptName || '';
   env.pathInfo = opts.pathInfo || '';
 
@@ -277,10 +278,14 @@ function makeEnv(opts) {
     }
   }
 
-  if (opts.input instanceof Stream) {
-    env.input = opts.input;
+  if (opts.input) {
+    if (opts.input instanceof Stream) {
+      env.input = opts.input;
+    } else {
+      throw new StrataError('Environment input must be a Stream');
+    }
   } else {
-    throw new StrataError('Environment input must be a Stream');
+    env.input = new BufferedStream('');
   }
 
   // The input stream is paused so that we don't miss any data events that
