@@ -70,6 +70,14 @@ function checkEnv(env) {
   // - requestTime       A Date that indicates the time the request was received
   assert(env.requestTime instanceof Date, 'requestTime must be a Date');
 
+  // - remotePort        The number of the port on the client that is being used.
+  //                     May be 0 if unknown
+  assert(typeof env.remotePort === 'number', 'remotePort must be a number');
+
+  // - serverPort        The number of the TCP port the server is bound to. May be
+  //                     0 when using Unix domain sockets
+  assert(typeof env.serverPort === 'number', 'serverPort must be a number');
+
   // - headers           An object of client-supplied HTTP headers and their values.
   assert(typeof env.headers === 'object', 'headers must be an object');
 
@@ -129,7 +137,7 @@ function checkEnv(env) {
   // - scriptName, if not empty, should start with a "/"
   // - pathInfo should be "/" if scriptName is empty
   // - scriptName should never be "/" but instead be empty
-  if (env.scriptName !== "") {
+  if (env.scriptName !== '') {
     assert(env.scriptName.charAt(0) == '/', 'scriptName must start with "/"');
     assert(env.scriptName !== '/', 'scriptName must not be "/", make it empty and pathInfo "/"');
   }
