@@ -191,11 +191,11 @@ Request.prototype.__defineGetter__('port', function () {
   var port = this.hostWithPort.split(':')[1] || this.env.headers['x-forwarded-port'];
 
   if (port) {
-    return port;
+    return parseInt(port, 10);
   } else if (this.ssl) {
-    return '443';
+    return 443;
   } else if (this.env.headers['x-forwarded-host']) {
-    return '80';
+    return 80;
   }
 
   return this.env.serverPort;
@@ -208,9 +208,9 @@ Request.prototype.__defineGetter__('port', function () {
 Request.prototype.__defineGetter__('baseUrl', function () {
   var protocol = this.protocol;
   var url = protocol + '//' + this.host;
-
   var port = this.port;
-  if ((protocol == 'https:' && port != '443') || (protocol == 'http:' && port != '80')) {
+
+  if ((protocol === 'https:' && port !== 443) || (protocol === 'http:' && port !== 80)) {
     url += ':' + port;
   }
 
